--- a/Deber02-LopezDiana/app/src/main/res/values/colors.xml
+++ b/Deber02-LopezDiana/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#E5E6EB</color>
     <color name="lightblue">#E7F3FF</color>
-    <color name="blue">#1579F3</color>
+    <color name="blue">#126DDD</color>
     <color name="red">#E32144</color>
     <color name="graytext">#767676</color>
 </resources>
