--- a/02-firebase/app/src/main/res/layout/activity_eordenes.xml
+++ b/02-firebase/app/src/main/res/layout/activity_eordenes.xml
@@ -10,40 +10,35 @@
         android:id="@+id/tv_restaurante"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:text="Restaurante"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/et_cantidad_producto"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.112"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.022" />
 
     <Spinner
         android:id="@+id/sp_restaurantes"
         android:layout_width="250dp"
         android:layout_height="45dp"
-        android:layout_marginTop="32dp"
-        app:layout_constraintBottom_toTopOf="@+id/et_cantidad_producto"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.211"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_restaurante"
-        app:layout_constraintVertical_bias="0.0" />
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toEndOf="@+id/tv_restaurante"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/tv_restaurante"
+        app:layout_constraintTop_toBottomOf="@+id/tv_restaurante" />
 
     <Spinner
         android:id="@+id/sp_producto"
         android:layout_width="250dp"
         android:layout_height="45dp"
         android:layout_marginTop="24dp"
-        app:layout_constraintBottom_toTopOf="@+id/et_cantidad_producto"
         app:layout_constraintEnd_toEndOf="@+id/sp_restaurantes"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/sp_restaurantes"
-        app:layout_constraintTop_toBottomOf="@+id/sp_restaurantes"
-        app:layout_constraintVertical_bias="0.114" />
+        app:layout_constraintTop_toBottomOf="@+id/sp_restaurantes" />
 
     <Button
         android:id="@+id/btn_anadir_lista_producto"
@@ -54,58 +49,79 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toEndOf="@+id/sp_producto"
-        app:layout_constraintTop_toTopOf="@+id/sp_producto"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="@+id/sp_producto" />
 
     <EditText
         android:id="@+id/et_cantidad_producto"
         android:layout_width="250dp"
         android:layout_height="45dp"
+        android:layout_marginTop="33dp"
         android:ems="10"
         android:hint="Cantidad de productos"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:inputType="number"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_info_lista"
         app:layout_constraintEnd_toEndOf="@+id/sp_producto"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/sp_producto"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.346" />
+        app:layout_constraintTop_toBottomOf="@+id/sp_producto"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/tv_info_lista"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="100dp"
         android:text="Lista de productos ordenados:"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/et_cantidad_producto"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/et_cantidad_producto"
-        app:layout_constraintTop_toBottomOf="@+id/et_cantidad_producto"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintEnd_toEndOf="@+id/lv_productos"
+        app:layout_constraintStart_toStartOf="@+id/lv_productos"
+        app:layout_constraintTop_toBottomOf="@+id/sp_producto" />
 
     <Button
         android:id="@+id/btn_completar_pedido"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
         android:text="Completar Pedido"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/lv_productos"
+        app:layout_constraintHorizontal_bias="0.527"
+        app:layout_constraintStart_toStartOf="@+id/lv_productos"
         app:layout_constraintTop_toBottomOf="@+id/lv_productos"
-        app:layout_constraintVertical_bias="0.358" />
+        app:layout_constraintVertical_bias="0.047" />
 
     <ListView
         android:id="@+id/lv_productos"
-        android:layout_width="334dp"
-        android:layout_height="219dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/tv_info_lista"
+        android:layout_width="335dp"
+        android:layout_height="143dp"
+        android:layout_marginTop="28dp"
+        app:layout_constraintEnd_toEndOf="@+id/et_cantidad_producto"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/tv_info_lista"
-        app:layout_constraintTop_toBottomOf="@+id/tv_info_lista"
-        app:layout_constraintVertical_bias="0.037" />
+        app:layout_constraintStart_toStartOf="@+id/et_cantidad_producto"
+        app:layout_constraintTop_toBottomOf="@+id/tv_info_lista" />
+
+    <TextView
+        android:id="@+id/tv_info"
+        android:layout_width="90dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="8dp"
+        android:text="Total compra:"
+        app:layout_constraintBottom_toTopOf="@+id/btn_completar_pedido"
+        app:layout_constraintEnd_toStartOf="@+id/tv_totalOrden"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/lv_productos"
+        app:layout_constraintTop_toBottomOf="@+id/lv_productos"
+        app:layout_constraintVertical_bias="0.428" />
+
+    <TextView
+        android:id="@+id/tv_totalOrden"
+        android:layout_width="150dp"
+        android:layout_height="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_completar_pedido"
+        app:layout_constraintEnd_toEndOf="@+id/lv_productos"
+        app:layout_constraintHorizontal_bias="0.616"
+        app:layout_constraintStart_toStartOf="@+id/lv_productos"
+        app:layout_constraintTop_toBottomOf="@+id/lv_productos"
+        app:layout_constraintVertical_bias="0.392" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
