--- a/02-firebase/app/src/main/res/layout/activity_main.xml
+++ b/02-firebase/app/src/main/res/layout/activity_main.xml
@@ -76,6 +76,7 @@
         android:layout_width="234dp"
         android:layout_height="59dp"
         android:text="Ordenes"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/btn_restaurante"
         app:layout_constraintStart_toStartOf="@+id/btn_restaurante"
