--- a/02-firebase/app/src/main/res/layout/activity_eordenes.xml
+++ b/02-firebase/app/src/main/res/layout/activity_eordenes.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EOrdenes">
+    tools:context=".ECrearOrdenes">
 
     <TextView
         android:id="@+id/tv_restaurante"
