--- a/02-firebase/app/src/main/res/layout/activity_main.xml
+++ b/02-firebase/app/src/main/res/layout/activity_main.xml
@@ -14,27 +14,27 @@
         app:layout_constraintBottom_toTopOf="@+id/btn_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.768" />
 
     <Button
         android:id="@+id/btn_salir"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="Salir"
         android:textAllCaps="false"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/tv_bienvenida"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.95"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.654" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_producto"
         android:layout_width="268dp"
         android:layout_height="62dp"
-        android:text="Productos"
+        android:text="Crear Productos"
         android:textAllCaps="false"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -46,22 +46,23 @@
 
     <Button
         android:id="@+id/btn_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="138dp"
+        android:layout_height="60dp"
         android:text="Login"
         android:textAllCaps="false"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.503" />
+        app:layout_constraintVertical_bias="0.306" />
 
     <Button
         android:id="@+id/btn_restaurante"
         android:layout_width="257dp"
         android:layout_height="63dp"
-        android:text="Restaurante"
+        android:text="Crear Restaurante"
         android:textAllCaps="false"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -75,11 +76,36 @@
         android:id="@+id/btn_ordenes"
         android:layout_width="234dp"
         android:layout_height="59dp"
-        android:text="Ordenes"
+        android:text="Crear Orden"
+        android:textAllCaps="false"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/btn_restaurante"
         app:layout_constraintStart_toStartOf="@+id/btn_restaurante"
         app:layout_constraintTop_toBottomOf="@+id/btn_restaurante" />
+
+    <Button
+        android:id="@+id/btn_gestiónOrdenes"
+        android:layout_width="239dp"
+        android:layout_height="62dp"
+        android:text="Gestión Ordenes"
+        android:textAllCaps="false"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_restaurante" />
+
+    <Button
+        android:id="@+id/btn_VisualizarOrden"
+        android:layout_width="256dp"
+        android:layout_height="60dp"
+        android:text="Visualizar Ordenes"
+        android:textAllCaps="false"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/btn_ordenes"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_producto" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
