--- a/02-firebase/app/src/main/res/layout/activity_drestaurante.xml
+++ b/02-firebase/app/src/main/res/layout/activity_drestaurante.xml
@@ -17,7 +17,7 @@
         app:layout_constraintEnd_toEndOf="@+id/et_nombre_restaurante"
         app:layout_constraintStart_toStartOf="@+id/et_nombre_restaurante"
         app:layout_constraintTop_toBottomOf="@+id/et_nombre_restaurante"
-        app:layout_constraintVertical_bias="0.245" />
+        app:layout_constraintVertical_bias="0.138" />
 
     <EditText
         android:id="@+id/et_nombre_restaurante"
@@ -30,7 +30,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.423" />
+        app:layout_constraintVertical_bias="0.485" />
 
     <Button
         android:id="@+id/btn_datos_prueba"
@@ -63,5 +63,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.825"
         app:srcCompat="@drawable/restaurante" />
 </androidx.constraintlayout.widget.ConstraintLayout>
