--- a/01-Examen/app/src/main/res/layout/activity_actualizar_papeleria.xml
+++ b/01-Examen/app/src/main/res/layout/activity_actualizar_papeleria.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActualizarPapeleria">
+    tools:context=".papeleria.ActualizarPapeleria">
 
     <EditText
         android:id="@+id/box_nombrePapeleriaActualizar"
